[metadata]
name = monasca-persister
author = OpenStack
author-email = openstack-dev@lists.openstack.org
summary = Moves metrics and alarm state transitions from the Message Queue to the Metrics and Alarms database.
classifier=
  Development Status :: 5 - Production/Stable
  License :: OSI Approved :: Apache Software License
  Topic :: System :: Monitoring
keywords = openstack monitoring storage
description-file = README.md
home-page = https://github.com/openstack/monasca-persister
license = Apache

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    monasca-persister = monasca_persister.persister:main

[files]
packages =
    monasca_persister
data_files =
    /etc/monasca =
        etc/monasca/persister.conf
        etc/monasca/persister-logging.conf

[extras]
influxdb =
  influxdb>=2.9.2 # MIT
cassandra =
  cassandra-driver!=3.6.0,>=2.1.4 # Apache-2.0

[pbr]
autodoc_index_modules = True

[wheel]
universal = 1

