[metadata]
name = monasca-persister
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
summary = Moves metrics and alarm state transitions from the Message Queue to the Metrics and Alarms database.
python-requires = >=3.6
classifier=
  Development Status :: 5 - Production/Stable
  License :: OSI Approved :: Apache Software License
  Topic :: System :: Monitoring
  Programming Language :: Python
  Programming Language :: Python :: Implementation :: CPython
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7

keywords = openstack monitoring storage
description-file = README.rst
home-page = https://opendev.org/openstack/monasca-persister
license = Apache

[entry_points]
console_scripts =
    monasca-persister = monasca_persister.persister:main

oslo.config.opts =
    monasca_persister = monasca_persister.conf:list_opts

[files]
packages =
    monasca_persister
data_files =
    /etc/monasca =
        etc/monasca/persister-logging.conf

[extras]
influxdb =
  influxdb>=2.9.2 # MIT
cassandra =
  cassandra-driver>=3.11.0 # Apache-2.0
elasticsearch =
  elasticsearch<3.0.0,>=2.0.0 # Apache-2.0

[pbr]
autodoc_index_modules = True
